Fix z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,7 @@ small {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 50;
+    z-index: 100;
     transform: translateZ(0);
 }
 
